// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kol-textarea should render with _label="Label" _name="field" _hasCounter=true _maxLength=10 _maxLengthBehavior="soft" _value="Value" 1`] = `
<kol-textarea _value="Value">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field--has-counter kol-form-field--has-value kol-form-field-textarea">
      <label class="kol-form-field__label" htmlfor="textarea-nonce" id="textarea-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container"><textarea autocapitalize="off" autocorrect="off" class="kol-textarea" id="textarea-nonce" name="field" value="Value" style="resize: vertical;"></textarea>
          </div>
        </div>
      </div>
      <div class="kol-form-field__counter">
        <span aria-hidden="true" class="kol-form-field__counter kol-form-field__counter--exceeded" data-testid="input-counter">
          kol-character-limit-remaining
        </span>
        <span aria-live="polite" class="visually-hidden" data-testid="input-counter-aria" id="textarea-counter-nonce">
          kol-character-limit-remaining
        </span>
      </div>
    </div>
  </template>
</kol-textarea>
`;

exports[`kol-textarea should render with _label="Label" _name="field" _hasCounter=true _maxLength=10 _value="Value" 1`] = `
<kol-textarea _value="Value">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field--has-counter kol-form-field--has-value kol-form-field-textarea">
      <label class="kol-form-field__label" htmlfor="textarea-nonce" id="textarea-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container"><textarea autocapitalize="off" autocorrect="off" class="kol-textarea" id="textarea-nonce" maxlength="10" name="field" value="Value" style="resize: vertical;"></textarea>
          </div>
        </div>
      </div>
      <div class="kol-form-field__counter">
        <span aria-hidden="true" class="kol-form-field__counter kol-form-field__counter--exceeded" data-testid="input-counter">
          kol-character-counter-current-of-max
        </span>
        <span aria-live="polite" class="visually-hidden" data-testid="input-counter-aria" id="textarea-counter-nonce">
          kol-character-counter-current-of-max-aria
        </span>
      </div>
    </div>
  </template>
</kol-textarea>
`;

exports[`kol-textarea should render with _label="Label" _name="field" _maxLength=10 _value="Value" 1`] = `
<kol-textarea _value="Value">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field--has-value kol-form-field-textarea">
      <label class="kol-form-field__label" htmlfor="textarea-nonce" id="textarea-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container"><textarea aria-describedby="textarea-character-limit-hint-nonce" autocapitalize="off" autocorrect="off" class="kol-textarea" id="textarea-nonce" maxlength="10" name="field" value="Value" style="resize: vertical;"></textarea>
          </div>
        </div>
      </div>
      <span class="visually-hidden" id="textarea-character-limit-hint-nonce">
        kol-character-limit-hint
      </span>
    </div>
  </template>
</kol-textarea>
`;

exports[`kol-textarea should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _rows=5 _spellCheck=true _value="Value" _accessKey="V" 1`] = `
<kol-textarea _value="Value">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field--has-value kol-form-field-textarea">
      <label class="kol-form-field__label" htmlfor="textarea-nonce" id="textarea-label-nonce">
        <span class="kol-form-field__label-text kol-span kol-span--has-badge">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
            <kbd aria-hidden="true" class="badge-text-hint">
              V
            </kbd>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container"><textarea accesskey="V" autocapitalize="off" autocorrect="off" class="kol-textarea" id="textarea-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" rows="5" value="Value" style="resize: vertical;"></textarea>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-textarea>
`;

exports[`kol-textarea should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _rows=5 _spellCheck=true _value="Value" _alert=true 1`] = `
<kol-textarea _alert="" _value="Value">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field--has-value kol-form-field-textarea">
      <label class="kol-form-field__label" htmlfor="textarea-nonce" id="textarea-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container"><textarea autocapitalize="off" autocorrect="off" class="kol-textarea" id="textarea-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" rows="5" value="Value" style="resize: vertical;"></textarea>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-textarea>
`;

exports[`kol-textarea should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _rows=5 _spellCheck=true _value="Value" _disabled=true 1`] = `
<kol-textarea _value="Value">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field--disabled kol-form-field--has-value kol-form-field-textarea">
      <label class="kol-form-field__label" htmlfor="textarea-nonce" id="textarea-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container kol-input-container--disabled">
          <div class="kol-input-container__container"><textarea autocapitalize="off" autocorrect="off" class="kol-textarea kol-textarea--disabled" disabled="" id="textarea-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" rows="5" value="Value" style="resize: vertical;"></textarea>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-textarea>
`;

exports[`kol-textarea should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _rows=5 _spellCheck=true _value="Value" _hideLabel=true 1`] = `
<kol-textarea _value="Value">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field--has-value kol-form-field--hide-label kol-form-field-textarea">
      <label class="kol-form-field__label" hidden="" htmlfor="textarea-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container"><textarea aria-label="Label" autocapitalize="off" autocorrect="off" class="kol-textarea" id="textarea-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" rows="5" value="Value" style="resize: vertical;"></textarea>
          </div>
        </div>
        <div class="kol-form-field__tooltip">
          <div class="kol-tooltip__floating">
            <div class="kol-tooltip__arrow"></div>
            <span class="kol-span kol-tooltip__content" id="textarea-label-nonce">
              <span class="kol-span__container">
                <span class="kol-span__label">
                  Label
                </span>
                <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-textarea>
`;

exports[`kol-textarea should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _rows=5 _spellCheck=true _value="Value" _hint="Hint" 1`] = `
<kol-textarea _value="Value">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field--has-value kol-form-field-textarea">
      <label class="kol-form-field__label" htmlfor="textarea-nonce" id="textarea-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container"><textarea aria-describedby="textarea-hint-nonce" autocapitalize="off" autocorrect="off" class="kol-textarea" id="textarea-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" rows="5" value="Value" style="resize: vertical;"></textarea>
          </div>
        </div>
      </div>
      <span class="kol-form-field__hint" id="textarea-hint-nonce">
        Hint
      </span>
    </div>
  </template>
</kol-textarea>
`;

exports[`kol-textarea should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _rows=5 _spellCheck=true _value="Value" _icons={"left":{"icon":"codicon codicon-arrow-left"},"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-textarea _value="Value">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field--has-value kol-form-field-textarea">
      <label class="kol-form-field__label" htmlfor="textarea-nonce" id="textarea-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__adornment kol-input-container__adornment--start">
            <i aria-hidden="true" class="codicon codicon-arrow-left kol-icon kol-icon__icon kol-input-container__icon" role="presentation"></i>
          </div>
          <div class="kol-input-container__container"><textarea autocapitalize="off" autocorrect="off" class="kol-textarea" id="textarea-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" rows="5" value="Value" style="resize: vertical;"></textarea>
          </div>
          <div class="kol-input-container__adornment kol-input-container__adornment--end">
            <i aria-hidden="true" class="codicon codicon-arrow-right kol-icon kol-icon__icon kol-input-container__icon" role="presentation"></i>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-textarea>
`;

exports[`kol-textarea should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _rows=5 _spellCheck=true _value="Value" _icons={"left":{"icon":"codicon codicon-arrow-left"}} 1`] = `
<kol-textarea _value="Value">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field--has-value kol-form-field-textarea">
      <label class="kol-form-field__label" htmlfor="textarea-nonce" id="textarea-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__adornment kol-input-container__adornment--start">
            <i aria-hidden="true" class="codicon codicon-arrow-left kol-icon kol-icon__icon kol-input-container__icon" role="presentation"></i>
          </div>
          <div class="kol-input-container__container"><textarea autocapitalize="off" autocorrect="off" class="kol-textarea" id="textarea-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" rows="5" value="Value" style="resize: vertical;"></textarea>
          </div>
          <div class="kol-input-container__adornment kol-input-container__adornment--end"></div>
        </div>
      </div>
    </div>
  </template>
</kol-textarea>
`;

exports[`kol-textarea should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _rows=5 _spellCheck=true _value="Value" _icons={"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-textarea _value="Value">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field--has-value kol-form-field-textarea">
      <label class="kol-form-field__label" htmlfor="textarea-nonce" id="textarea-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__adornment kol-input-container__adornment--start"></div>
          <div class="kol-input-container__container"><textarea autocapitalize="off" autocorrect="off" class="kol-textarea" id="textarea-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" rows="5" value="Value" style="resize: vertical;"></textarea>
          </div>
          <div class="kol-input-container__adornment kol-input-container__adornment--end">
            <i aria-hidden="true" class="codicon codicon-arrow-right kol-icon kol-icon__icon kol-input-container__icon" role="presentation"></i>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-textarea>
`;

exports[`kol-textarea should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _rows=5 _spellCheck=true _value="Value" _infoPopover={"_label":"Info","_content":"Ich bin ein Hinweis.","_icons":"kolicon-alert-info"} 1`] = `
<kol-textarea _value="Value">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field--has-value kol-form-field-textarea">
      <label class="kol-form-field__label" htmlfor="textarea-nonce" id="textarea-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
        <kol-popover-button-wc _content="Ich bin ein Hinweis." _hidelabel="" _icons="kolicon-alert-info" _inline="" _label="Info" _variant="ghost">
          <div class="kol-popover-button__popover--styled">
            Ich bin ein Hinweis.
          </div>
        </kol-popover-button-wc>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container"><textarea autocapitalize="off" autocorrect="off" class="kol-textarea" id="textarea-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" rows="5" value="Value" style="resize: vertical;"></textarea>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-textarea>
`;

exports[`kol-textarea should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _rows=5 _spellCheck=true _value="Value" _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} _hideMsg=true _touched=true 1`] = `
<kol-textarea _touched="" _value="Value">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field--error kol-form-field--has-value kol-form-field--hidden-msg kol-form-field--msg-type-error kol-form-field--touched kol-form-field-textarea">
      <label class="kol-form-field__label" htmlfor="textarea-nonce" id="textarea-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container kol-input-container--error">
          <div class="kol-input-container__container"><textarea aria-invalid="true" autocapitalize="off" autocorrect="off" class="kol-textarea kol-textarea--error kol-textarea--touched" id="textarea-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" rows="5" value="Value" style="resize: vertical;"></textarea>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-textarea>
`;

exports[`kol-textarea should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _rows=5 _spellCheck=true _value="Value" _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} _touched=true 1`] = `
<kol-textarea _touched="" _value="Value">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field--error kol-form-field--has-value kol-form-field--msg-type-error kol-form-field--touched kol-form-field-textarea">
      <label class="kol-form-field__label" htmlfor="textarea-nonce" id="textarea-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container kol-input-container--error">
          <div class="kol-input-container__container"><textarea aria-describedby="textarea-msg-nonce" aria-invalid="true" autocapitalize="off" autocorrect="off" class="kol-textarea kol-textarea--error kol-textarea--touched" id="textarea-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" rows="5" value="Value" style="resize: vertical;"></textarea>
          </div>
        </div>
      </div>
      <div class="kol-alert kol-alert--type-error kol-alert--variant-msg kol-form-field__msg" id="textarea-msg-nonce" role="alert">
        <span class="visually-hidden">
          kol-error
        </span>
        <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-error" role="presentation"></i>
        <div class="kol-alert__content">
          Es ist ein Fehler aufgetreten
        </div>
      </div>
    </div>
  </template>
</kol-textarea>
`;

exports[`kol-textarea should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _rows=5 _spellCheck=true _value="Value" _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} 1`] = `
<kol-textarea _value="Value">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field--has-value kol-form-field-textarea">
      <label class="kol-form-field__label" htmlfor="textarea-nonce" id="textarea-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container"><textarea aria-describedby="textarea-msg-nonce" autocapitalize="off" autocorrect="off" class="kol-textarea" id="textarea-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" rows="5" value="Value" style="resize: vertical;"></textarea>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-textarea>
`;

exports[`kol-textarea should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _rows=5 _spellCheck=true _value="Value" _readOnly=true 1`] = `
<kol-textarea _value="Value">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field--has-value kol-form-field--read-only kol-form-field-textarea">
      <label class="kol-form-field__label" htmlfor="textarea-nonce" id="textarea-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
        <span aria-hidden="true" class="kol-form-field__label__read-only">
          (kol-readonly)
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container"><textarea autocapitalize="off" autocorrect="off" class="kol-textarea kol-textarea--readonly" id="textarea-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" readonly="" rows="5" value="Value" style="resize: vertical;"></textarea>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-textarea>
`;

exports[`kol-textarea should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _rows=5 _spellCheck=true _value="Value" _shortKey="S" 1`] = `
<kol-textarea _value="Value">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field--has-value kol-form-field-textarea">
      <label class="kol-form-field__label" htmlfor="textarea-nonce" id="textarea-label-nonce">
        <span class="kol-form-field__label-text kol-span kol-span--has-badge">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
            <kbd aria-hidden="true" class="badge-text-hint">
              S
            </kbd>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container"><textarea aria-keyshortcuts="S" autocapitalize="off" autocorrect="off" class="kol-textarea" id="textarea-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" rows="5" value="Value" style="resize: vertical;"></textarea>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-textarea>
`;

exports[`kol-textarea should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _rows=5 _spellCheck=true _value="Value" _touched=true 1`] = `
<kol-textarea _touched="" _value="Value">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field--has-value kol-form-field--touched kol-form-field-textarea">
      <label class="kol-form-field__label" htmlfor="textarea-nonce" id="textarea-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container"><textarea autocapitalize="off" autocorrect="off" class="kol-textarea kol-textarea--touched" id="textarea-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" rows="5" value="Value" style="resize: vertical;"></textarea>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-textarea>
`;

exports[`kol-textarea should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _rows=5 _spellCheck=true _value="Value" _variant="custom" 1`] = `
<kol-textarea _value="Value">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field--custom kol-form-field--has-value kol-form-field-textarea">
      <label class="kol-form-field__label" htmlfor="textarea-nonce" id="textarea-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container"><textarea autocapitalize="off" autocorrect="off" class="kol-textarea" id="textarea-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" rows="5" value="Value" style="resize: vertical;"></textarea>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-textarea>
`;

exports[`kol-textarea should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _rows=5 _spellCheck=true _value="Value" 1`] = `
<kol-textarea _value="Value">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field--has-value kol-form-field-textarea">
      <label class="kol-form-field__label" htmlfor="textarea-nonce" id="textarea-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container"><textarea autocapitalize="off" autocorrect="off" class="kol-textarea" id="textarea-nonce" name="field" placeholder="Hier steht ein Platzhaltertext" rows="5" value="Value" style="resize: vertical;"></textarea>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-textarea>
`;

exports[`kol-textarea should render with _label="Label" _name="field" _placeholder="Platzhalter" _required=true 1`] = `
<kol-textarea>
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field--required kol-form-field-textarea">
      <label class="kol-form-field__label" htmlfor="textarea-nonce" id="textarea-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container"><textarea autocapitalize="off" autocorrect="off" class="kol-textarea kol-textarea--required" id="textarea-nonce" name="field" placeholder="Platzhalter" required="" style="resize: vertical;"></textarea>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-textarea>
`;

exports[`kol-textarea should render with _label="Label" _name="field" _resize="none" _value="Value" 1`] = `
<kol-textarea _value="Value">
  <template shadowrootmode="open">
    <div class="kol-form-field kol-form-field--has-value kol-form-field-textarea">
      <label class="kol-form-field__label" htmlfor="textarea-nonce" id="textarea-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container"><textarea autocapitalize="off" autocorrect="off" class="kol-textarea" id="textarea-nonce" name="field" value="Value" style="resize: none;"></textarea>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-textarea>
`;
